--- a/docSrc/public/index.html
+++ b/docSrc/public/index.html
@@ -6,13 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta charset="utf-8" />
     <title>JXML React</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/tailwind.css" />
-    <link rel="stylesheet" href="/styles/typography.css" />
-    <link rel="stylesheet" href="/styles/prism.css" />
+    <link rel="shortcut icon" href="/jxml-reactfavicon.ico" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/jxml-reactapple-icon.png" />
+    <link rel="manifest" href="/jxml-reactmanifest.json" />
+    <link rel="stylesheet" href="/jxml-react/styles/styles.css" />
+    <link rel="stylesheet" href="/jxml-reactstyles/tailwind.css" />
+    <link rel="stylesheet" href="/jxml-reactstyles/typography.css" />
+    <link rel="stylesheet" href="/jxml-reactstyles/prism.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
