--- a/docSrc/public/index.html
+++ b/docSrc/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta charset="utf-8" />
     <title>JXML React</title>
-    <link rel="shortcut icon" href="/jxml-reactfavicon.ico" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/jxml-reactapple-icon.png" />
-    <link rel="manifest" href="/jxml-reactmanifest.json" />
+    <link rel="shortcut icon" href="/jxml-react/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/jxml-react/apple-icon.png" />
+    <link rel="manifest" href="/jxml-react/manifest.json" />
     <link rel="stylesheet" href="/jxml-react/styles/styles.css" />
     <link rel="stylesheet" href="/jxml-reactstyles/tailwind.css" />
     <link rel="stylesheet" href="/jxml-reactstyles/typography.css" />
